FIX font import and animation spacing

--- a/components/ui/page_reveal.css
+++ b/components/ui/page_reveal.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
-
 /* PageRevealAnimation.css */
 
 .page-reveal-container {
@@ -18,7 +16,7 @@
 .letter {
     position: absolute;
     font-size: 5rem;
-    font-family: "Oswald", sans-serif;
+    /* font-family: "Oswald", sans-serif; */
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
@@ -42,22 +40,22 @@
 /* Keyframes for Letter B Dropping and Bouncing */
 @keyframes dropB {
     0% {
-        transform: var(--vertical-squeeze) translate(-2rem, -150vh);
+        transform: var(--vertical-squeeze) translate(-2.5rem, -150vh);
         opacity: 0;
     }
 
     60% {
-        transform: var(--vertical-squeeze) translate(-2rem, 0vh);
+        transform: var(--vertical-squeeze) translate(-2.5rem, 0vh);
         opacity: .2;
     }
 
     80% {
-        transform: var(--vertical-squeeze) translate(-2rem, -200px);
+        transform: var(--vertical-squeeze) translate(-2.5rem, -200px);
         opacity: .6;
     }
 
     100% {
-        transform: var(--vertical-squeeze) translate(-2rem, 0vh);
+        transform: var(--vertical-squeeze) translate(-2.5rem, 0vh);
         opacity: 1;
     }
 }
@@ -75,12 +73,12 @@
     }
 
     80% {
-        transform: var(--vertical-squeeze) translateX(calc(200px + 2rem));
+        transform: var(--vertical-squeeze) translateX(calc(200px + 2.5rem));
         opacity: .6;
     }
 
     100% {
-        transform: var(--vertical-squeeze) translateX(calc(0vw + 2rem));
+        transform: var(--vertical-squeeze) translateX(calc(0vw + 2.5rem));
         opacity: 1;
     }
 }
@@ -88,21 +86,21 @@
 /* Keyframes for Scaling Up */
 @keyframes scaleUpB {
     0% {
-        transform: var(--vertical-squeeze) scale(1) translate(-2rem, 0vh);
+        transform: var(--vertical-squeeze) scale(1) translate(-2.5rem, 0vh);
     }
 
     100% {
-        transform: var(--vertical-squeeze) scale(1.5) translate(-2rem, 0vh);
+        transform: var(--vertical-squeeze) scale(1.5) translate(-3.5rem, 0vh);
     }
 }
 
 @keyframes scaleUpK {
     0% {
-        transform: var(--vertical-squeeze) scale(1) translateX(calc(0vw + 2rem));
+        transform: var(--vertical-squeeze) scale(1) translateX(calc(0vw + 2.5rem));
     }
 
     100% {
-        transform: var(--vertical-squeeze) scale(1.5) translateX(calc(0vw + 2rem));
+        transform: var(--vertical-squeeze) scale(1.5) translateX(calc(0vw + 3.5rem));
     }
 }
 
